# dartsort

./: .gitignore  MANIFEST.in  README.md  environment.yml  jupytext.toml  pyproject.toml  requirements-ci.txt  requirements-full.txt  requirements.txt  setup.py  zensical.toml
.github/workflows/: ci.yml  ci_windows.yml  deploy.yml  docs.yml
dartsort/: config.py  main.py
dartsort/denoise/: enforce_decrease.py
dartsort/detect/: detect.py
dartsort/localize/: localize_torch.py  localize_util.py
dartsort/peel/: base.py  grab.py  matching.py  peel_base.py  subtract.py
dartsort/transform/: __init__.py  all_transformers.py  amplitudes.py  base.py  enforce_decrease.py  localize.py  pipeline.py  single_channel_denoiser.py  temporal_pca.py
dartsort/util/: data_util.py  multiprocessing_util.py  spiketorch.py  waveform_util.py
dartsort/vis/: scatterplots.py
data/: np2_channel_map.npy
docs/: main_api.md  toolkit_api.md
docs/source/: api.rst  conf.py  index.md
docs/source/_templates/: navigation.html
notebook/: basic_integration_test.py  ci diag.py  cluster shop.py  cluster_shop.ipynb  cluster_shop.ipynb.REMOVED.git-id  cluster_shop.py  dartsort_dredge_demo.ipynb  dartsort_dredge_demo.py  data test.py  dead reckoning.py  denoise np1.py  denoise np2.py  denoiser.py  diagnostic.py  exploratory.py  geom debug.py  hdbscan_clustering.ipynb  hdbscan_clustering.ipynb.REMOVED.git-id  hdbscan_clustering.py  hdbscan_clustering_5min.py  hybrid 10.py  hybrid cluster.py  hybrid_11.py  ibl_dandi_example.py  initial training.py  make hybrid.py  mgh.py  np1 feats.py  np2 processing version c.py  paperfigs.py  pdists.py  postcheck.py  ptp vae.py  re clust.py  reg fig loop.py  reg_sim_exp.py  relocating.py  relocating_all.py  restats  sortStinger1.py  (+16 more)
notebook/tests/: debug_matching.py  test_agreement.py  test_amplitude_scaling.py  test_batch_optim.py  test_deconv.py  test_ibme.py  test_mm_initialization.py  test_normxcorr1d.py  test_reassignment.py  test_relocation.py
notebooks_NPUltra_Neuron_analysis/: get_figure_data.ipynb  resampled_analysis.ipynb
pcapaper/: pcapaper.bib  pcapaper.tex
pretrained/: detect_np1.pt  detect_np2.pt  offset_trained_denoiser_added_temp_boost.pt  single_chan_denoiser.pt
scripts/: cluster_hdbscan.py  cluster_hdbscan_compare_kilosort.py  compare_hybrid_gt.py  compute_snr.py  datoviz1.py  datoviz2.py  datoviz_feats.py  datoviz_pca.py  destripe.py  duster.py  featurize.py  find_minmax.py  h5_for_datoviz.py  hdbscan_cluster.py  isosplit.py  localize.py  merge_split_script.py  mplvis_feats.py  pca_featurize.py  pipeline.py  rastervis_feats.py  re_localize.py  run_deconv_merge_split.py  run_isosplit.py  run_pipeline_uhd_resampled.py  sdsc_destripe_localize.py  sdsc_localize.py  sdsc_localize_pids.py  spline_registration.py  subtract.py  subtraction_h5_to_npy.py  train_psvae.py  uhd_pipeline.py  upload_feats.py
spike_psvae/: .subtract..swp  Untitled.py  after_deconv_merge_split.py  ap_filter.py  augmentations.py  before_deconv_merge_split.py  cell_type_feature.py  chunk_features.py  cluster.py  cluster_uhd.py  cluster_utils.py  cluster_viz.py  cluster_viz_index.py  data_utils.py  decomp.py  deconv_resid_merge.py  deconvolve.py  denoise.py  denoise_temporal_decrease.pyx  detect.py  dipole cshl048.py  drifty_deconv.py  drifty_deconv_uhd.py  extract.py  extract_deconv.py  extractors.py  featurize.py  filter_standardize.py  free_templates.md  grab_and_localize.py  hybrid_analysis.py  ibme.py  ibme_corr.py  ibme_fast_raster.pyx  isocut5.py  jisotonic5.c  laplace.py  layers.py  linear_ae.py  linear_ae_index-Copy1.py  (+52 more)
src/dartsort/: __init__.py  cli.py  config.py  main.py
src/pretrained/: offset_trained_denoiser.pt  original_single_chan_denoiser.pt
src/spike_psvae/: Untitled2.py  after_deconv_merge_split.py  ap_filter.py  chunk_features.py  cluster.py  cluster_uhd.py  cluster_utils.py  cluster_viz.py  cluster_viz_index.py  deconv_resid_merge.py  deconvolve.py  denoise.py  denoise_new_cleaned.py  denoise_spatial_decrease.py  detect.py  drifty_deconv.py  drifty_deconv_uhd.py  extract_deconv.py  extractors.py  filter_standardize.py  free_templates.md  free_templates.py  grab_and_localize.py  hybrid.py  hybrid_analysis.py  isocut5.py  jisotonic5.pyx  linear_ae_index.py  localization.py  localize_index.py  multiprocessing_utils.py  optutils.py  outliers.py  pick_log_c_x.py  post_processing_uhd.py  posterior.py  psvae.py  ptp_vae.py  py_utils.py  pyks_ccg.py  (+14 more)
tests/: conftest.py  test_agglomerate.py  test_alignment.py  test_cluster_util.py  test_clustering.py  test_config.py  test_dartsort.py  test_data_util.py  test_density.py  test_detect.py  test_drift_util.py  test_drifty_matching.py  test_enforce_decrease.py  test_grab_and_featurize.py  test_kmeans.py  test_linalg.py  test_localize_torch.py  test_matching.py  test_mixture_classifier.py  test_modeling.py  test_ppca.py  test_relocate.py  test_simkit.py  test_sparse.py  test_spiketorch.py  test_subtract.py  test_templates.py  test_threshold.py  test_tmm.py  test_torch_optimization_util.py  test_transform.py  test_universal.py  test_util.py  test_waveform_util.py
(+981 files in other folders)
