[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "DARTsort"
version = "0.3.5"
authors = [{ name = "Charlie Windolf", email = "ciw2107@columbia.edu" }]
description = "DARTsort"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "cupy",
  "h5py",
  "linear_operator",
  "numba",
  "numpy>=1.20;python_version<'3.13'",
  "numpy>=2.0.0;python_version>='3.13'",
  "opt-einsum",
  "pandas",
  "packaging",
  "probeinterface",
  "pydantic",
  "scipy>=1.13",
  "scikit-learn",
  "spikeinterface>=0.101.2",
  "torch>=2.0",
  "tqdm",
]

[project.optional-dependencies]
vis = ["matplotlib", "seaborn"]
dev = ["pytest", "pytest-cov"]
full = ["matplotlib", "seaborn", "pytest", "pytest-cov", "ipywidgets", "ipykernel", "black"]

[project.urls]
"Homepage" = "https://github.com/cwindolf/dartsort"
"Bug Tracker" = "https://github.com/cwindolf/dartsort/issues"

[tool.setuptools.package-data]
"dartsort.pretrained" = ["*.pt", "*.npz", "*.npy"]

[project.scripts]
"dartsort" = "dartsort.cli:dartsort_cli"

[tool.coverage.run]
source = ["dartsort"]
omit = ["*/vis/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-level=14 --durations=100"
filterwarnings = [
  'ignore:The extractor is not serializable to file. The provenance will not be saved.:UserWarning',
]

[tool.black]
line-length = 88
include = 'src\/.*\.pyi?$|tests\/.*\.pyi?$'

[tool.ruff]
line-length = 88

[tool.jupytext]
"formats" = "ipynb,py:percent"

[tool.pyright]
"include" = ["src"]
