[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "dartsort"
dynamic = ["version"]
authors = [{ name = "Charlie Windolf", email = "ciw2048@gmail.com" }]
description = "DARTsort"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "dredge-ephys",
  "h5py",
  "jaxtyping",
  "kdepy",
  "linear_operator",
  "numba",
  "numpy>=1.20;python_version<'3.13'",
  "numpy>=2.0.0;python_version>='3.13'",
  "opt-einsum",
  "pandas",
  "probeinterface",
  "pydantic",
  "pynapple",
  "scipy>=1.13",
  "scikit-learn",
  "spikeinterface>=0.104.0",
  "sympy",
  "torch>=2.0",
  "tqdm",
]

[project.optional-dependencies]
doc = ["sphinx", "myst-parser", "sphinx-autobuild", "sphinx-automodapi", "versioningit", "poethepoet", "graphviz"]
test = ["pytest", "pytest-cov"]
vis = ["matplotlib", "seaborn", "matplotlib-venn"]

[project.urls]
"Homepage" = "https://github.com/cwindolf/dartsort"
"Bug Tracker" = "https://github.com/cwindolf/dartsort/issues"

[tool.setuptools.package-data]
"dartsort.pretrained" = ["*.pt", "*.npz", "*.npy"]

[tool.versioningit]
# use their defaults

[tool.poe.tasks]
"livedoc" = "sphinx-autobuild docs/source docs/_build/html"

[project.scripts]
"dartsort" = "dartsort.cli:dartsort_cli"

[tool.coverage.run]
source = ["dartsort"]
omit = ["*/vis/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--log-level=14 --durations=100"
filterwarnings = [
  'ignore:The extractor is not serializable to file. The provenance will not be saved.:UserWarning',
]

[tool.black]
line-length = 88
include = 'src\/.*\.pyi?$|tests\/.*\.pyi?$'

[tool.ruff]
line-length = 88
extend-select = ["I"]
ignore = ["F722"]

[tool.jupytext]
"formats" = "ipynb,py:percent"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.analysis]
replace-imports-with-any = ["hdbscan"]

[tool.ty.rules]
"unsupported-base" = "ignore"
"invalid-key" = "ignore"
